--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,39 @@ name = "langgraph-unity-catalog-checkpoint"
 version = "0.0.1"
 description = "Unity Catalog-backed persistence for LangChain and LangGraph"
 readme = "README.md"
+license = "MIT"
+authors = [
+    {name = "Nate Fleming", email = "nate.fleming@databricks.com"}
+]
+maintainers = [
+    {name = "Nate Fleming", email = "nate.fleming@databricks.com"}
+]
+keywords = [
+    "langchain",
+    "langgraph",
+    "databricks",
+    "unity-catalog",
+    "checkpoint",
+    "persistence",
+    "store",
+    "memory",
+    "agents",
+    "llm",
+    "ai",
+]
+classifiers = [
+    "Development Status :: 3 - Alpha",
+    "Intended Audience :: Developers",
+    "Intended Audience :: Science/Research",
+    "Operating System :: OS Independent",
+    "Programming Language :: Python :: 3",
+    "Programming Language :: Python :: 3.12",
+    "Programming Language :: Python :: 3.13",
+    "Topic :: Scientific/Engineering :: Artificial Intelligence",
+    "Topic :: Software Development :: Libraries :: Python Modules",
+    "Topic :: Database",
+    "Typing :: Typed",
+]
 requires-python = ">=3.12"
 dependencies = [
     "databricks-connect>=17.0.10",
@@ -20,6 +53,12 @@ dependencies = [
     "nest-asyncio>=1.6.0",
     "python-dotenv>=1.2.1",
 ]
+
+[project.urls]
+Homepage = "https://github.com/natefleming/langgraph_unity_catalog_checkpoint"
+Repository = "https://github.com/natefleming/langgraph_unity_catalog_checkpoint"
+Issues = "https://github.com/natefleming/langgraph_unity_catalog_checkpoint/issues"
+Documentation = "https://github.com/natefleming/langgraph_unity_catalog_checkpoint#readme"
 
 [tool.setuptools.packages.find]
 where = ["src"]
