--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,6 +33,8 @@ classifiers = [
     "Intended Audience :: Science/Research",
     "Operating System :: OS Independent",
     "Programming Language :: Python :: 3",
+    "Programming Language :: Python :: 3.10",
+    "Programming Language :: Python :: 3.11",
     "Programming Language :: Python :: 3.12",
     "Programming Language :: Python :: 3.13",
     "Topic :: Scientific/Engineering :: Artificial Intelligence",
@@ -40,7 +42,7 @@ classifiers = [
     "Topic :: Database",
     "Typing :: Typed",
 ]
-requires-python = ">=3.12"
+requires-python = ">=3.10"
 dependencies = [
     "databricks-connect>=17.0.10",
     "databricks-langchain>=0.9.0",
@@ -75,7 +77,7 @@ dev = [
 
 [tool.ruff]
 line-length = 100
-target-version = "py312"
+target-version = "py310"
 
 [tool.ruff.lint]
 select = [
