--- a/pyproject.toml
+++ b/pyproject.toml
@@ -44,16 +44,10 @@ classifiers = [
 ]
 requires-python = ">=3.10"
 dependencies = [
-    "databricks-connect>=17.0.10",
-    "databricks-langchain>=0.9.0",
     "databricks-sdk>=0.73.0",
     "langchain>=1.0.3",
     "langgraph>=1.0.2",
-    "langmem>=0.0.30",
     "loguru>=0.7.3",
-    "mlflow==3.5.1",
-    "nest-asyncio>=1.6.0",
-    "python-dotenv>=1.2.1",
 ]
 
 [project.urls]
@@ -72,6 +66,13 @@ dev = [
     "pytest-cov>=4.1.0",
     "ruff>=0.6.0",
     "twine>=5.0.0",
+    "python-dotenv>=1.0.0",
+    "databricks-langchain>=0.9.0",
+]
+examples = [
+    "databricks-langchain>=0.9.0",
+    "mlflow>=3.5.0",
+    "nest-asyncio>=1.6.0",
     "python-dotenv>=1.0.0",
 ]
 
