--- a/requirements.txt
+++ b/requirements.txt
@@ -1,144 +1,42 @@
-aiohappyeyeballs==2.6.1
-aiohttp==3.13.2
-aiohttp-retry==2.9.1
-aiosignal==1.4.0
-alembic==1.17.1
-annotated-doc==0.0.3
 annotated-types==0.7.0
-anthropic==0.72.0
-anyio==4.11.0
-attrs==25.4.0
-blinker==1.9.0
-cachetools==6.2.1
-certifi==2025.10.5
+anyio==4.12.1
+certifi==2026.1.4
 cffi==2.0.0
 charset-normalizer==3.4.4
-click==8.3.0
-cloudpickle==3.1.2
-contourpy==1.3.3
-cryptography==46.0.3
-cycler==0.12.1
-databricks-ai-bridge==0.9.0
-databricks-langchain==0.9.0
-databricks-sdk==0.73.0
-dataclasses-json==0.6.7
-deprecation==2.1.0
-distro==1.9.0
-docker==7.1.0
-docstring-parser==0.17.0
-dydantic==0.0.8
-fastapi==0.121.0
-flask==3.1.2
-flask-cors==6.0.1
-fonttools==4.60.1
-frozenlist==1.8.0
-gitdb==4.0.12
-gitpython==3.1.45
-google-auth==2.42.1
-googleapis-common-protos==1.71.0
-graphene==3.4.3
-graphql-core==3.2.7
-graphql-relay==3.2.0
-grpcio==1.76.0
-grpcio-status==1.76.0
-gunicorn==23.0.0
+cryptography==46.0.4
+databricks-sdk==0.85.0
+google-auth==2.48.0
 h11==0.16.0
 httpcore==1.0.9
 httpx==0.28.1
-httpx-sse==0.4.3
 idna==3.11
-importlib-metadata==8.7.0
-iniconfig==2.3.0
-itsdangerous==2.2.0
-jinja2==3.1.6
-jiter==0.11.1
-joblib==1.5.2
 jsonpatch==1.33
 jsonpointer==3.0.0
-kiwisolver==1.4.9
-langchain==1.0.3
-langchain-anthropic==1.0.1
-langchain-classic==1.0.0
-langchain-community==0.4.1
-langchain-core==1.0.3
-langchain-openai==1.0.2
-langchain-text-splitters==1.0.0
-langgraph==1.0.2
-langgraph-checkpoint==3.0.1
-langgraph-prebuilt==1.0.2
-langgraph-sdk==0.2.9
-langmem==0.0.30
-langsmith==0.4.41
+langchain==1.2.9
+langchain-core==1.2.9
+langgraph==1.0.8
+langgraph-checkpoint==4.0.0
+langgraph-prebuilt==1.0.7
+langgraph-sdk==0.3.4
+langsmith==0.6.9
 loguru==0.7.3
-mako==1.3.10
-markupsafe==3.0.3
-marshmallow==3.26.1
-matplotlib==3.10.7
-mlflow==3.5.1
-mlflow-skinny==3.5.1
-mlflow-tracing==3.5.1
-multidict==6.7.0
-mypy-extensions==1.1.0
-nest-asyncio==1.6.0
-numpy==2.3.4
-openai==2.7.1
-opentelemetry-api==1.38.0
-opentelemetry-proto==1.38.0
-opentelemetry-sdk==1.38.0
-opentelemetry-semantic-conventions==0.59b0
-orjson==3.11.4
-ormsgpack==1.12.0
+orjson==3.11.7
+ormsgpack==1.12.2
 packaging==25.0
-pandas==2.3.3
-pillow==12.0.0
-pluggy==1.6.0
-propcache==0.4.1
-protobuf==6.33.0
-py4j==0.10.9.9
-pyarrow==21.0.0
-pyasn1==0.6.1
+protobuf==6.33.5
+pyasn1==0.6.2
 pyasn1-modules==0.4.2
-pycparser==2.23
-pydantic==2.12.4
+pycparser==3.0
+pydantic==2.12.5
 pydantic-core==2.41.5
-pydantic-settings==2.11.0
-pygments==2.19.2
-pyparsing==3.2.5
-pytest==8.4.2
-python-dateutil==2.9.0.post0
-python-dotenv==1.2.1
-pytz==2025.2
 pyyaml==6.0.3
-regex==2025.11.3
 requests==2.32.5
 requests-toolbelt==1.0.0
 rsa==4.9.1
-scikit-learn==1.7.2
-scipy==1.16.3
-setuptools==80.9.0
-six==1.17.0
-smmap==5.0.2
-sniffio==1.3.1
-sqlalchemy==2.0.44
-sqlparse==0.5.3
-starlette==0.49.3
-tabulate==0.9.0
-tenacity==9.1.2
-threadpoolctl==3.6.0
-tiktoken==0.12.0
-tqdm==4.67.1
-trustcall==0.0.39
+tenacity==9.1.3
 typing-extensions==4.15.0
-typing-inspect==0.9.0
 typing-inspection==0.4.2
-tzdata==2025.2
-unitycatalog-ai==0.3.2
-unitycatalog-client==0.3.0
-unitycatalog-langchain==0.3.0
-urllib3==2.5.0
-uvicorn==0.38.0
-werkzeug==3.1.3
+urllib3==2.6.3
+uuid-utils==0.14.0
 xxhash==3.6.0
-yarl==1.22.0
-zipp==3.23.0
 zstandard==0.25.0
